[project]
name = "reinforceseminor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsyu12345", email = "syukut@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "ipykernel>=6.29.4",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reinforceseminor"]
